keep compatibility with jdk 8